关于mdx文件构建报错处理

--- a/data/blog/next-blog-starter-use.mdx
+++ b/data/blog/next-blog-starter-use.mdx
@@ -9,8 +9,14 @@ https://github.com/timlrx/tailwind-nextjs-starter-blog
 这个项目是一个Next项目
 值得注意的几个点，
 
-（1）
+（1）yarn
 首先就是yarn作为包管理工具，我实际比较愿意用npm，因为相对于windows环境npm使用起来感觉更好一些。比如说这个环境变量“PWD”环境变量，你在linux或者UNIX可以使用，但是在windows就不可以，但是我们的脚本一定要到这个当前工作目录。
+
+a yarn 安装
+
+
+
+b yarn 在windows部署报错，解决跨系统报错的问题
 
 所以当我们用yarn作为项目包管理工具，项目启动第一个命令yarn dev就会报错：
 Unbound variable "PWD"
