--- a/data/blog/fullstack_open_01_helsinki_university.mdx
+++ b/data/blog/fullstack_open_01_helsinki_university.mdx
@@ -37,10 +37,11 @@ ReactDOM.createRoot(document.getElementById('root')).render(<App />)
 ReactDOM.createRoot(document.getElementById('root')).render(<App />)
 这一行代码涉及到React应用的启动过程，它是将React组件渲染到DOM中的关键步骤
 
-（1）查找DOM元素： document.getElementById('root') 查找到HTML中的<div id="root"></div>元素。
+<div>
+（1）查找DOM元素： document.getElementById('root') 查找到HTML中的 id="root"div元素。
 （2）创建根： ReactDOM.createRoot(element)根据找到的元素创建一个React根。
-（3）渲染组件： 根的render方法被调用并传递了<App />，启动组件树的渲染并将它们插入文档中的<div id="root">，<App />就是主应用组件，也就是App.js,根据代码引入的那块也能找打对应的App.js位置。
-
+（3）渲染组件： 根的render方法被调用并传递了<App />，启动组件树的渲染并将它们插入文档中的<div id="root"></div>，<App />就是主应用组件，也就是App.js,根据代码引入的那块也能找打对应的App.js位置。
+</div>
 简单的一个Hello word demo
 
 可以修改App.js的内容如下
@@ -66,6 +67,7 @@ export default App;
 文件App.js就是一个定义名为App的React组件
 还是index.js最后一句命令（index.js和index.html应用程序的启动点）
 
+```
 index.html            index.js
 ------------------    ----------------------------------------
 <!DOCTYPE html>       import React from 'react';
@@ -82,6 +84,9 @@ index.html            index.js
                           <App />
                       </React.StrictMode>
                     );
+
+```
+
 
 
 ```
