--- a/data/blog/next-blog-starter-use.mdx
+++ b/data/blog/next-blog-starter-use.mdx
@@ -46,11 +46,16 @@ change after
 
 主要的原理就是利用node命令，来获取这个“当前目录”，然后在项目中要用到“当前目录”的地方获取返回过去。
 
-（2）
+（2）mdx文档
+
 mdx文档，和之前的md文档不太一样，mdx是ng是一个md文档的扩展，它可以让我们在md文档中使用jsx语法，来编写我们的代码。
 我们可以直接把一个md文章直接改后缀得到一个mdx文件，然后在上面最修改添加一些jsx代码。
 
 jsx是JavaScript的一个扩展，它允许JavaScript代码中写类似HTML的语法，可以用这种声明式的方式使用HTML标签描述界面。
+
+特使字符导致构建失败
+要注意一个问题，就是mdx文件的内容如果不是代码块里面的部分或涉及到代码，会导致构建失败，可以转义符或者不用这些特殊字符。
+遇到这个问题，可以使用yarn run build命令执行看结果，来找是那些文件的问题，如果构建都失败的话，那在vercel上构建也会失败。
 
 （3）关于在vercel上的部署
 这个博客基于vercel部署，很好的一点就是在vercel配置好，甚至本地不用做本地部署（当然是添加mdx博客这些基本的，如果做大的改动还是要本地部署看效果，看是否报错）
