--- a/data/blog/next-blog-features.mdx
+++ b/data/blog/next-blog-features.mdx
@@ -5,3 +5,9 @@ date: '2024-07-29'
 
 这里是博客的一些扩展实践
 
+基础配置
+首先每个博客mdx文件都会有信息关于作者、标题、日期、分类等信息，这些信息会被解析成一个对象，然后被传递给博客的模板。
+一方面我们可以在mdx文件自己去填写
+像一些基础的配置，比如说作者的名字，联系方式，头像这些都可以在 data/authors里配置。
+
+实际author.mdx影响不止文档上的信息，还会影响about页面
