--- a/data/blog/fullstack_open_01_helsinki_university.mdx
+++ b/data/blog/fullstack_open_01_helsinki_university.mdx
@@ -220,7 +220,7 @@ React组件名称必须大写
 # javascript
 Node.js 是一个基于Google Chrome V8 JavaScript运行环境，几乎可以在任何地方工作，从服务器到手机的应用。
 
-变量 Variables
+## 变量 Variables
 在JavaScript中，有几种方法来定义变量
 ```
 const x = 1
@@ -235,3 +235,240 @@ x = 4               // causes an error
 ```
 const 实际上并没有定义一个变量，而是一个常量，类似Java final修饰的。
 let就是简单的定义一个简单的变量。
+
+定义变量有let，var和const，实际上var涉及到作用域（函数作用域或者是全局作用域，不是块作用域）以及var的声明提升（即变量声明会被提升到函数作用域的顶部，但是不会提升赋值。这很容易导致混淆和错误）
+，由于这些问题所以建议使用let和const。
+
+```
+console.log(y); // undefined
+var y = 10;
+
+```
+
+所以说最好是使用let和const，而不是var。
+
+## Arrays
+
+```
+const t = [1, -1, 3]
+
+t.push(5)
+
+console.log(t.length) // 4 is printed
+console.log(t[1])     // -1 is printed
+
+t.forEach(value => {
+  console.log(value)  // numbers 1, -1, 3, 5 are printed, each to own line
+})
+```
+
+forEach方法 上面例子就是接受一个用箭头定义的函数作为参数
+
+## Objects
+在JavaScript中，有几种不同的方法定义对象，常见的方式，就是通过大括号内累出其属性来实现。
+
+```
+const object1 = {
+  name: 'Arto Hellas',
+  age: 35,
+  education: 'PhD',
+}
+
+const object2 = {
+  name: 'Full Stack web application development',
+  level: 'intermediate studies',
+  size: 5,
+}
+
+const object3 = {
+  name: {
+    first: 'Dan',
+    last: 'Abramov',
+  },
+  grades: [2, 3, 5, 3],
+  department: 'Stanford University',
+}
+
+```
+
+根Java做对比，JavaScript并没有类的概念，ES6增加了class语法，但是JavaScript的class只是语法糖，只能说有助于构造面向对象的类。
+
+函数 Functions
+
+箭头函数
+
+```
+const sum = (p1, p2) => {
+  console.log(p1)
+  console.log(p2)
+  return p1 + p2
+}
+```
+
+Object methods and "this"
+箭头函数和使用function关键字定义的函数，在涉及到它们对关键字this的行为方式时有很大不同，后者指的是对象本身。
+
+
+# 组件状态，事件处理
+
+Component helper functions
+
+Destructuring
+允许在赋值时从对象和数组中destructure解构取值。
+
+```
+// 传统方法
+const obj = {a: 1, b: 2};
+const a = obj.a;
+const b = obj.b;
+
+// 解构赋值
+const {a, b} = obj;
+console.log(a); // 1
+console.log(b); // 2
+
+
+const numbers = [1, [2, 3], 4];
+const [one, [two, three], four] = numbers;
+console.log(one); // 1
+console.log(two); // 2
+console.log(three); // 3
+console.log(four); // 4
+
+```
+
+Page re-rendering
+页面重新渲染
+App.js
+```
+const App = (props) => {
+  const {counter} = props
+  return (
+    <div>{counter}</div>
+  )
+}
+
+export default App
+```
+
+
+index.js
+
+```
+import React from 'react'
+import ReactDOM from 'react-dom/client'
+
+import App from './App'
+
+let counter = 1
+
+ReactDOM.createRoot(document.getElementById('root')).render(
+  <App counter={counter} />
+)
+```
+
+重新渲染的命令包裹在refresh函数
+```
+let counter = 1
+
+const refresh = () => {
+  ReactDOM.createRoot(document.getElementById('root')).render(
+    <App counter={counter} />
+  )
+}
+
+refresh()
+counter += 1
+refresh()
+counter += 1
+refresh()
+```
+
+Stateful component
+组件中添加状态改变，这需要添加React状态,状态（State）是React组件中用于保存、控制和传递数据的对象
+
+先修改Index.js
+```
+import React from 'react'
+import ReactDOM from 'react-dom/client'
+
+import App from './App'
+
+ReactDOM.createRoot(document.getElementById('root')).render(<App />)
+```
+App.js修改
+```
+import { useState } from 'react'
+
+const App = () => {
+
+  const [ counter, setCounter ] = useState(0)
+
+
+  setTimeout(
+    () => setCounter(counter + 1),
+    1000
+  )
+
+  return (
+    <div>{counter}</div>
+  )
+}
+
+export default App
+```
+这就是一个计时器，1000毫秒加1
+第一行
+```
+import { useState } from 'react'
+```
+
+```
+该组件函数体函数调用
+const [ counter, setCounter ] = useState(0)
+```
+
+setTimeout函数传递两个参数，一个增加计数器状态函数和一个一秒钟的超时。
+
+Event handling
+事件处理程序，增加计数器在用户点击按钮时发生，按钮元素实现的。
+
+```
+const App = () => {
+  const [ counter, setCounter ] = useState(0)
+
+
+  const handleClick = () => {
+    console.log('clicked')
+  }
+
+  return (
+    <div>
+      <div>{counter}</div>
+
+      <button onClick={handleClick}>
+        plus
+      </button>
+    </div>
+  )
+}
+```
+
+Event handler is a function
+按钮定义事件处理程序，并声明它们的onClick属性
+
+Passing state to child components
+
+```
+<button onClick={() => setCounter(counter + 1)}>
+  plus
+</button>
+```
+
+
+
+
+Changes in state cause rerendering
+
+
+Refactoring the components
