解决编译报错

--- a/data/blog/Java的Cursor的使用.mdx
+++ b/data/blog/Java的Cursor的使用.mdx
@@ -4,6 +4,7 @@ date:  '2024-08-15'
 description: Java的Cursor的使用场景,由于数据集过大导致内存占用过大或溢出的情况。通过一行一行读取
 ---
 最近看代码，有一段代码涉及到Cursor，感觉写法挺有意思的。注意是Cursor，而不是Consumer，我之前把两个搞混了，看代码看的浑浑噩噩的。
+PS(这里的Cursor和谷歌最近退出Cursor不是一个东西，看来这个Cursor光标这个词挺好的，大家都喜欢拿他命名。谷歌的是一个编译器，内置AI模型帮助代码编写，这里我说的是各个ORM提供的一个数据库大数据集读取使用的工具包)
 
 这里说的Cursor，一般来是JDBC的工具，像我在项目中的mybatis里面的Cursor。
 ```
@@ -72,7 +73,7 @@ isOpen()方法用于检查游标是否已经打开。如果游标已经打开并
 isConsumed()方法用于检查游标中的所有数据是否都已经被处理。如果游标中的所有数据都已经被读取或者使用，该方法返回true，否则返回false。
 getCurrentIndex()方法返回当前游标位于结果集的索引位置。这个索引位置从0开始计数，它可以用来跟踪已经处理的行数或条目数
 
-这三个方法我们可以判断是否数据集，一行一行读取是否能读完，当前索引，这对我们遍历很有用，本身这个接口就是Iterable<T>迭代器。
+这三个方法我们可以判断是否数据集，一行一行读取是否能读完，当前索引，这对我们遍历很有用，本身这个接口就是Iterable迭代器。
 
 一般我们选择的ORM都会对应这个接口有对应的某人实现DefaultCursor。这个我么们可以通过idea工具来查看，总之当遇到一个大数据集加载导致占用内存飙升甚至内存溢出，可以考虑采用这个Cursor工具，来减小内存占用以及Cursor的并发提高效率算短时间。
 
