--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,12 +1,12 @@
 ---
 name: Zhang Peng
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
+occupation: A Good People
+company: XXXXX
 email: address@yoursite.com
 twitter: https://twitter.com/Twitter
 linkedin: https://www.linkedin.com
-github: https://github.com
+github: https://github.com/stubborn123
 ---
 
 {/* Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
