--- a/data/blog/next-blog-features.mdx
+++ b/data/blog/next-blog-features.mdx
@@ -12,3 +12,5 @@ description: 就是关于使用next-blog的一些配置设置
 像一些基础的配置，比如说作者的名字，联系方式，头像这些都可以在 data/authors里配置。
 
 实际author.mdx影响不止文档上的信息，还会影响about页面
+
+这里关于头部的属性里面有一个tag，标签我们可以文章定义标签
