--- a/data/blog/open_03_render.mdx
+++ b/data/blog/open_03_render.mdx
@@ -228,3 +228,30 @@ git push -u origin main
 ## 验证部署
 在Render会自动从Github仓库中拉取代码，构建并部署
 访问Render提供的域名，确认应用是否进行
+
+
+本地测试
+
+安装依赖
+后端
+```
+cd myapp-backend
+npm install
+
+```
+前端
+```
+cd ../myapp-frontend
+npm install
+
+```
+
+配置env文件
+数据库配置
+
+启动后端项目
+npm run start
+
+启动前端项目
+npm run start
+
