--- a/data/blog/next-blog-features.mdx
+++ b/data/blog/next-blog-features.mdx
@@ -14,3 +14,5 @@ description: 就是关于使用next-blog的一些配置设置
 实际author.mdx影响不止文档上的信息，还会影响about页面
 
 这里关于头部的属性里面有一个tag，标签我们可以文章定义标签
+
+每个mdx都会有一个块，里面会有线管描述，里面有一个title属性。我们title属性可以做为搜索的关键词来被查询。
