--- a/data/blog/fullstack_open_06_heisinki_university.mdx
+++ b/data/blog/fullstack_open_06_heisinki_university.mdx
@@ -40,5 +40,50 @@ npm install react-redux
 
 More components
 
-b 再来点reducers
+# b 再来点reducers
 store with complex State
+
+Combined reducers
+
+Finishing the filters
+
+Redux Toolkit
+Redux Toolkit是一个解决这些常见的Redux相关问题的库。
+```
+npm install @reduxjs/toolkit
+```
+
+Redux DevTools
+Redux DevTools是一个Chrome插件，为Redux提供有用的开发工具。
+
+# c 在Redux应用中与后端通信
+
+Asynchronous actions and redux thunk
+```
+npm install redux-thunk
+```
+
+# d connect 方法
+这部分代码 GitHub地址 https://github.com/fullstack-hy2020/query-notes/tree/part6-0
+
+利用React Query管理服务器端数据
+用React Query存储并管理从服务器检索的数据
+安装React query
+```
+npm install react-query
+```
+
+使用React Query 将数据同步至服务器
+
+优化性能
+React Query 是服务器状态的库，负责管理服务器和客户端之间的异步操作
+Redux等是客户端状态的库，存储异步数据
+
+因此，React Query 是一个在前端维护服务器状态的库，即作为服务器存储内容的缓存。React Query 简化了对服务器数据的处理，在某些情况下，可以消除将服务器数据存储在前端的需求。
+
+useReducer
+使用React query 
+
+使用context传递组件的状态
+
+在单独的文件中定义计数器context
